# Team4-Last-Backend

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cd.yml  ci.yml
apps/: settings.py  settings.py.bak  urls.py
apps/chat/: models.py  serializers.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/chat/services/: chat.py  intent.py  model_picker.py  weather_for_chat.py
apps/core/: models.py
apps/diary/: models.py  serializers.py  urls.py  views.py
apps/diary/migrations/: 0001_initial.py  0002_initial.py
apps/diary/tests/: test_models.py  test_serializers.py
apps/locations/: models.py  serializers.py  urls.py  views.py
apps/locations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_favoritelocation_options_and_more.py
apps/locations/tests/: test_models.py  test_serializers.py  test_views.py
apps/recommend/: models.py  serializers.py  urls.py  views.py
apps/recommend/migrations/: 0001_initial.py  0002_initial.py
apps/recommend/services/: recommend_service.py  weather_service.py
apps/recommend/tests/: test_services.py
apps/users/: auth_urls.py  authentication.py  models.py  serializers.py  social_urls.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_users_phone_af6883_idx_remove_user_phone_and_more.py  0003_alter_user_age_group.py  0004_token.py  0005_token_is_auto_login.py  0006_token_revoked_at_alter_token_access_expires_at_and_more.py
apps/users/services/: auth_service.py  social_auth_service.py  token_service.py
apps/users/utils/: auth_utils.py  send_email.py  social_auth.py
apps/weather/: models.py  repository.py  serializer.py  serializers.py  urls.py  views.py
apps/weather/migrations/: 0001_initial.py
apps/weather/services/: geocoding.py  openweather.py  weather_service.py
scripts/: deploy.sh  run.sh
settings/: asgi.py  base.py  development.py  production.py  urls.py  wsgi.py
